fixed overlapping divs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,7 @@
 .main-body {
   background: rgba(255, 255, 255, 0.2);
   min-height: 100vh;
+  max-width: 70%;
 }
 
 //spinner
